fix spacing and alignment

--- a/_sass/pages/providers.scss
+++ b/_sass/pages/providers.scss
@@ -10,6 +10,10 @@
     width: 100%;
     height: 460px;
 
+    @include media-breakpoint-up(md) {
+      height: 560px;
+    }
+
     a {
       @include link-reset();
     }
